infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: auth-depl
spec: 
  replicas: 1
  selector: # The purpose the selector is here is to tell deployment how to find all the pods that it's going to create
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec: 
      containers:
        - name: auth # only for loggin purposes
          image: ketanrtd/auth

---

# The default service is cluster ip service
apiVersion: v1
kind: Service
metadata: 
  name: auth-srv
spec: 
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
